@@ -1,5 +1,11 @@
 2011-01-24  Pedro Alves  <pedro@codesourcery.com>
 
+	* ada-valprint.c (val_print_packed_array_elements): Pass the
+	correct struct value to val_print.
+	(ada_val_print_1): Ditto.
+
+2011-01-24  Pedro Alves  <pedro@codesourcery.com>
+
 	Don't lose embedded_offset in printing routines throughout.
 
 	* valprint.h (val_print_array_elements): Change prototype.
